[package]
name = "bitcoin-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bnum = { git = "https://github.com/estevaopbs/bnum", branch = "master", features = [
    "nightly",
] }
sha2 = "0.10.8"
hmac = "0.12.1"
once_cell = "1.19.0"
ripemd = "0.1.3"

[dev-dependencies]
rand = "0.9.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
